[gd_scene load_steps=25 format=3 uid="uid://cgbjwxaenlhw"]

[ext_resource type="Script" path="res://escenas/niveles/CharacterCam.gd" id="1_7qglc"]
[ext_resource type="Script" path="res://scripts/levels/test_movables.gd" id="1_bh6m0"]
[ext_resource type="Script" path="res://scripts/TimeManager.gd" id="2_cqs5h"]
[ext_resource type="TileSet" uid="uid://bbrbh1tmn88so" path="res://test/rodrigo_test/test_env.tres" id="3_fat06"]
[ext_resource type="Script" path="res://scripts/Grid.gd" id="4_owohy"]
[ext_resource type="Texture2D" uid="uid://bvfjvuajg5dn2" path="res://arte/carretera.png" id="5_bros8"]
[ext_resource type="Texture2D" uid="uid://db6bw0pcu6fgd" path="res://test/rodrigo_test/tex.png" id="6_rtbjj"]
[ext_resource type="PackedScene" path="res://recursos/personaje/human.tscn" id="7_xp2tf"]
[ext_resource type="PackedScene" path="res://recursos/personaje/rat.tscn" id="8_mit2j"]
[ext_resource type="PackedScene" path="res://recursos/personaje/bird.tscn" id="9_unox2"]
[ext_resource type="Texture2D" uid="uid://bdm3p5l7k6wfk" path="res://test/rodrigo_test/estrella.png" id="10_akpix"]
[ext_resource type="Texture2D" uid="uid://cc3taxhebvwhc" path="res://test/rodrigo_test/round_nodetailsOutline.png" id="11_7xy4l"]
[ext_resource type="Script" path="res://escenas/niveles/CharSelector.gd" id="12_odfut"]
[ext_resource type="StyleBox" uid="uid://d5lxoxe5oy5h" path="res://arte/sprites/ui/level/normal.tres" id="13_1tqhk"]
[ext_resource type="StyleBox" uid="uid://vg2dxmwu551w" path="res://arte/sprites/ui/level/hover.tres" id="14_6rgm3"]
[ext_resource type="StyleBox" uid="uid://4k12n2b7w3tx" path="res://arte/sprites/ui/level/pressed.tres" id="15_384dg"]
[ext_resource type="Texture2D" uid="uid://bv2spd2jnopti" path="res://arte/sprites/anna_dialogo.png" id="16_wfy1g"]
[ext_resource type="Texture2D" uid="uid://durxojtc1f7rs" path="res://arte/sprites/sonya_dialogo.png" id="17_naw6o"]
[ext_resource type="Texture2D" uid="uid://ctecnqs4fntme" path="res://arte/sprites/ruben_dialogo.png" id="18_7wcbe"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4p3us"]
atlas = ExtResource("11_7xy4l")
region = Rect2(271.535, 678.75, 135.52, 137.94)
margin = Rect2(30, 30, 60, 60)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_ndwnl"]
atlas = ExtResource("11_7xy4l")
region = Rect2(686.59, 545.125, 131.89, 135.52)
margin = Rect2(30, 30, 60, 60)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1nfrr"]
border_width_left = 5
border_width_top = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4oikv"]
bg_color = Color(0, 0, 0, 1)
border_width_top = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wee6r"]
bg_color = Color(0, 0, 0, 1)
border_width_top = 80
border_width_right = 80
border_color = Color(0, 0, 0, 0)
border_blend = true
corner_radius_top_right = 50
corner_detail = 20

[node name="level_1" type="Node2D"]

[node name="CharacterCam" type="Camera2D" parent="."]
position = Vector2(884, 116)
scale = Vector2(1, 1.04236)
script = ExtResource("1_7qglc")

[node name="MovableObjs" type="Node2D" parent="." node_paths=PackedStringArray("basura", "cable", "tendido", "grid", "players")]
position = Vector2(320, 64)
scale = Vector2(0.125, 0.125)
script = ExtResource("1_bh6m0")
basura = NodePath("../TileMap/Block")
cable = NodePath("../TileMap/Cable")
tendido = [NodePath("../TileMap/Tendido"), NodePath("../TileMap/Tendido2"), NodePath("../TileMap/Tendido3")]
grid = NodePath("../TileMap")
players = [NodePath("../TileMap/rat"), NodePath("../TileMap/Human"), NodePath("../TileMap/bird")]

[node name="TimeManager" type="Node2D" parent="." node_paths=PackedStringArray("players")]
script = ExtResource("2_cqs5h")
players = [NodePath("../TileMap/rat"), NodePath("../TileMap/Human"), NodePath("../TileMap/bird")]

[node name="TileMap" type="TileMap" parent="." node_paths=PackedStringArray("movables")]
position = Vector2(320, 64)
scale = Vector2(0.125, 0.125)
tile_set = ExtResource("3_fat06")
cell_quadrant_size = 128
format = 2
layer_0/name = "background"
layer_0/tile_data = PackedInt32Array(262145, 1, 0, 327681, 1, 0, 327682, 1, 0, 262146, 1, 0, 262148, 1, 0, 458756, 1, 0, 65534, 1, 0, -5, 1, 0, 65531, 1, 0, 131067, 1, 0, 196603, 1, 0, 262139, 1, 0, 327675, 1, 0, 393211, 1, 0, 458747, 1, 0, 524283, 1, 0, 589819, 1, 0, 655355, 1, 0, 720891, 0, 0, 786427, 0, 0, -4, 1, 0, 65532, 1, 0, 131068, 1, 0, 196604, 1, 0, 262140, 1, 0, 327676, 1, 0, 393212, 1, 0, 458748, 1, 0, 524284, 1, 0, 589820, 1, 0, 655356, 1, 0, 720892, 0, 0, 786428, 0, 0, -3, 1, 0, 65533, 1, 0, 131069, 1, 0, 196605, 1, 0, 262141, 1, 0, 327677, 1, 0, 393213, 1, 0, 458749, 1, 0, 524285, 1, 0, 589821, 1, 0, 655357, 1, 0, 720893, 0, 0, 786429, 0, 0, -2, 1, 0, 131070, 1, 0, 196606, 1, 0, 262142, 1, 0, 327678, 1, 0, 393214, 1, 0, 458750, 1, 0, 524286, 1, 0, 589822, 1, 0, 655358, 1, 0, 720894, 0, 0, 786430, 0, 0, -1, 1, 0, 196607, 1, 0, 262143, 1, 0, 327679, 1, 0, 393215, 1, 0, 458751, 1, 0, 524287, 1, 0, 589823, 1, 0, 655359, 1, 0, 720895, 0, 0, 786431, 0, 0, 0, 1, 0, 65536, 1, 0, 196608, 1, 0, 262144, 1, 0, 327680, 1, 0, 393216, 1, 0, 458752, 1, 0, 524288, 1, 0, 589824, 1, 0, 655360, 0, 0, 720896, 0, 0, -65535, 1, 0, 1, 1, 0, 65537, 1, 0, 393217, 1, 0, 458753, 1, 0, 524289, 1, 0, 589825, 1, 0, 655361, 0, 0, 720897, 0, 0, 196610, 1, 0, 393218, 1, 0, 458754, 1, 0, 524290, 1, 0, 589826, 1, 0, 655362, 0, 0, 720898, 0, 0, 196611, 1, 0, 262147, 1, 0, 327683, 1, 0, 393219, 1, 0, 458755, 1, 0, 524291, 1, 0, 589827, 1, 0, 655363, 0, 0, 720899, 0, 0, -65532, 1, 0, 4, 1, 0, 65540, 1, 0, 196612, 1, 0, 327684, 1, 0, 393220, 1, 0, 524292, 1, 0, 589828, 1, 0, 655364, 0, 0, 720900, 0, 0, -65531, 1, 0, 5, 1, 0, 65541, 1, 0, 131077, 1, 0, 196613, 1, 0, 262149, 1, 0, 327685, 1, 0, 393221, 1, 0, 458757, 1, 0, 524293, 1, 0, 589829, 1, 0, 655365, 0, 0, 720901, 0, 0, -65530, 1, 0, 6, 1, 0, 65542, 1, 0, 131078, 1, 0, 196614, 1, 0, 262150, 1, 0, 327686, 1, 0, 393222, 1, 0, 458758, 1, 0, 524294, 1, 0, 589830, 1, 0, 655366, 0, 0, 720902, 0, 0, -65529, 1, 0, 7, 1, 0, 65543, 1, 0, 131079, 1, 0, 196615, 1, 0, 262151, 1, 0, 327687, 1, 0, 393223, 1, 0, 458759, 1, 0, 524295, 1, 0, 589831, 1, 0, 655367, 0, 0, 720903, 0, 0, -65528, 1, 0, 8, 1, 0, 65544, 1, 0, 131080, 1, 0, 196616, 1, 0, 262152, 1, 0, 327688, 1, 0, 393224, 1, 0, 458760, 1, 0, 524296, 1, 0, 589832, 1, 0, 655368, 0, 0, 720904, 0, 0, -65527, 1, 0, 9, 1, 0, 65545, 1, 0, 131081, 1, 0, 196617, 1, 0, 262153, 1, 0, 327689, 1, 0, 393225, 1, 0, 458761, 1, 0, 524297, 1, 0, 589833, 1, 0, 655369, 0, 0, 720905, 0, 0, -65526, 1, 0, 10, 1, 0, 65546, 1, 0, 131082, 1, 0, 196618, 1, 0, 262154, 1, 0, 327690, 1, 0, 393226, 1, 0, 458762, 1, 0, 524298, 1, 0, 589834, 1, 0, 655370, 0, 0, 720906, 0, 0, -65525, 1, 0, 11, 1, 0, 65547, 1, 0, 131083, 1, 0, 196619, 1, 0, 262155, 1, 0, 327691, 1, 0, 393227, 1, 0, 458763, 1, 0, 524299, 1, 0, 589835, 1, 0, 655371, 0, 0, 720907, 0, 0, -65524, 1, 0, 12, 1, 0, 65548, 1, 0, 131084, 1, 0, 196620, 1, 0, 262156, 1, 0, 327692, 1, 0, 393228, 1, 0, 458764, 1, 0, 524300, 1, 0, 589836, 1, 0, 655372, 0, 0, 720908, 0, 0, -65523, 1, 0, 13, 1, 0, 65549, 1, 0, 131085, 1, 0, 196621, 1, 0, 262157, 1, 0, 327693, 1, 0, 393229, 1, 0, 458765, 1, 0, 524301, 1, 0, 589837, 1, 0, 655373, 131072, 0, 720909, 0, 0, -65522, 1, 0, 14, 1, 0, 65550, 1, 0, 131086, 1, 0, 196622, 1, 0, 262158, 1, 0, 327694, 1, 0, 393230, 1, 0, 458766, 1, 0, 524302, 1, 0, 589838, 1, 0, 655374, 0, 0, 720910, 0, 0, 196609, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 65539, 1, 0, 65538, 1, 0, 2, 1, 0, 3, 1, 0, -65533, 1, 0, -65534, 1, 0, 131072, 1, 0, 131071, 1, 0, 65535, 1, 0, -65536, 1, 0)
layer_1/name = "obstacles"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(131077, 2, 0, 196613, 2, 0, 196614, 2, 0, 131078, 2, 0, 327675, 2, 0, 393211, 2, 0, 458747, 2, 0, 262139, 2, 0)
layer_2/name = "human_obstacles"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array(131070, 2, 0, 65534, 2, 0)
layer_3/name = "rat_obstacles"
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = false
layer_3/y_sort_origin = 0
layer_3/z_index = 0
layer_3/tile_data = PackedInt32Array(65548, 2, 0)
layer_4/name = "bird_obstacles"
layer_4/enabled = true
layer_4/modulate = Color(1, 1, 1, 1)
layer_4/y_sort_enabled = false
layer_4/y_sort_origin = 0
layer_4/z_index = 0
layer_4/tile_data = PackedInt32Array(524290, 2, 0, 524291, 2, 0, 524292, 2, 0)
script = ExtResource("4_owohy")
arrow = ExtResource("5_bros8")
selected = ExtResource("6_rtbjj")
movables = NodePath("../MovableObjs")

[node name="Human" parent="TileMap" node_paths=PackedStringArray("grid", "movables", "time_manager") instance=ExtResource("7_xp2tf")]
z_index = 10
position = Vector2(0, 1024)
disp = Vector2(-0.5, 0.5)
grid = NodePath("..")
movables = NodePath("../../MovableObjs")
time_manager = NodePath("../../TimeManager")
level = null

[node name="rat" parent="TileMap" node_paths=PackedStringArray("grid", "movables", "time_manager") instance=ExtResource("8_mit2j")]
position = Vector2(4608, 512)
disp = Vector2(-0.5, -0.5)
grid = NodePath("..")
movables = NodePath("../../MovableObjs")
time_manager = NodePath("../../TimeManager")

[node name="bird" parent="TileMap" node_paths=PackedStringArray("grid", "movables", "time_manager") instance=ExtResource("9_unox2")]
position = Vector2(2048, 3072)
scale = Vector2(1, 1.00237)
disp = Vector2(-0.5, -0.5)
grid = NodePath("..")
movables = NodePath("../../MovableObjs")
time_manager = NodePath("../../TimeManager")
level = 1

[node name="Block" type="Sprite2D" parent="TileMap"]
position = Vector2(-1536, 2560)
texture = ExtResource("10_akpix")
centered = false

[node name="Sprite2D" type="Sprite2D" parent="TileMap/Block"]
scale = Vector2(2.5, 2.5)
texture = SubResource("AtlasTexture_4p3us")
centered = false

[node name="Tendido2" type="Sprite2D" parent="TileMap"]
z_index = 11
position = Vector2(4608, 2560)
texture = ExtResource("10_akpix")
centered = false

[node name="Tendido3" type="Sprite2D" parent="TileMap"]
z_index = 11
position = Vector2(4608, 3072)
texture = ExtResource("10_akpix")
centered = false

[node name="Tendido" type="Sprite2D" parent="TileMap"]
z_index = 11
position = Vector2(4608, 3584)
texture = ExtResource("10_akpix")
centered = false

[node name="Cable" type="Sprite2D" parent="TileMap"]
position = Vector2(4096, 4096)
texture = ExtResource("10_akpix")
centered = false

[node name="Sprite2D" type="Sprite2D" parent="TileMap/Cable"]
scale = Vector2(2.5, 2.5)
texture = SubResource("AtlasTexture_ndwnl")
centered = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 405
alignment = 1

[node name="VSeparator" type="VSeparator" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_1nfrr")

[node name="VSeparator2" type="VSeparator" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_1nfrr")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 230
alignment = 1

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_4oikv")

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_4oikv")

[node name="CharSelector" type="VBoxContainer" parent="CanvasLayer" node_paths=PackedStringArray("cam", "buttons", "characters")]
offset_right = 1024.0
offset_bottom = 3080.0
scale = Vector2(0.12, 0.12)
pivot_offset = Vector2(20, 20)
script = ExtResource("12_odfut")
cam = NodePath("../../CharacterCam")
buttons = [NodePath("Rat"), NodePath("Human"), NodePath("Bird")]
characters = [NodePath("../../TileMap/rat"), NodePath("../../TileMap/Human"), NodePath("../../TileMap/bird")]

[node name="Rat" type="Button" parent="CanvasLayer/CharSelector"]
layout_mode = 2
theme_override_colors/icon_normal_color = Color(0.6, 0.6, 0.6, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_colors/icon_focus_color = Color(0.6, 0.6, 0.6, 1)
theme_override_styles/normal = ExtResource("13_1tqhk")
theme_override_styles/hover = ExtResource("14_6rgm3")
theme_override_styles/pressed = ExtResource("15_384dg")
theme_override_styles/focus = ExtResource("13_1tqhk")
toggle_mode = true
icon = ExtResource("16_wfy1g")

[node name="Human" type="Button" parent="CanvasLayer/CharSelector"]
layout_mode = 2
theme_override_colors/icon_normal_color = Color(0.6, 0.6, 0.6, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_colors/icon_focus_color = Color(0.6, 0.6, 0.6, 1)
theme_override_styles/normal = ExtResource("13_1tqhk")
theme_override_styles/hover = ExtResource("14_6rgm3")
theme_override_styles/pressed = ExtResource("15_384dg")
theme_override_styles/focus = ExtResource("13_1tqhk")
toggle_mode = true
icon = ExtResource("17_naw6o")

[node name="Bird" type="Button" parent="CanvasLayer/CharSelector"]
layout_mode = 2
theme_override_colors/icon_normal_color = Color(0.6, 0.6, 0.6, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_colors/icon_focus_color = Color(0.6, 0.6, 0.6, 1)
theme_override_styles/normal = ExtResource("13_1tqhk")
theme_override_styles/hover = ExtResource("14_6rgm3")
theme_override_styles/pressed = ExtResource("15_384dg")
theme_override_styles/focus = ExtResource("13_1tqhk")
toggle_mode = true
icon = ExtResource("18_7wcbe")

[node name="Panel" type="Panel" parent="CanvasLayer"]
visible = false
offset_top = 463.0
offset_right = 415.895
offset_bottom = 671.465
theme_override_styles/panel = SubResource("StyleBoxFlat_wee6r")

[node name="Sliders" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 32.0
offset_top = 518.0
offset_right = 238.59
offset_bottom = 586.0
scale = Vector2(1.54959, 1.54959)
theme_override_constants/separation = 10

[node name="ratslider" type="HSlider" parent="CanvasLayer/Sliders"]
layout_mode = 2

[node name="humanslider" type="HSlider" parent="CanvasLayer/Sliders"]
layout_mode = 2

[node name="birdslider" type="HSlider" parent="CanvasLayer/Sliders"]
layout_mode = 2

[connection signal="pressed" from="CanvasLayer/CharSelector/Rat" to="CanvasLayer/CharSelector" method="_on_rat_pressed"]
[connection signal="pressed" from="CanvasLayer/CharSelector/Human" to="CanvasLayer/CharSelector" method="_on_human_pressed"]
[connection signal="pressed" from="CanvasLayer/CharSelector/Bird" to="CanvasLayer/CharSelector" method="_on_bird_pressed"]
